infra/k8s/client-depl.yaml
# This first half will create the pods based on the image.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: avishkaindula/client:latest
          # We don't have to specify :latest either. It is the default tag.
---
# This second half will create the service for the pods.
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: client
  # type: ClusterIP
  # ClusterIP is the default type. So we don't have to specify it.
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
