infra/k8s/comments-depl.yaml
# This first half will create the pods based on the image.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: avishkaindula/comments:latest
          # We don't have to specify :latest either. It is the default tag.
---
# This second half will create the service for the pods.
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  selector:
    app: comments
  # type: ClusterIP
  # ClusterIP is the default type. So we don't have to specify it.
  ports:
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
