infra/k8s/posts-depl.yaml
# This first half will create the pods based on the image.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: avishkaindula/posts:latest
          # We don't have to specify :latest either. It is the default tag.
---
# This second half will create the service for the pods.
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-srv
  # name: posts-srv is already given to the nodeport we created in the posts-depl.yaml file.
spec:
  selector:
    app: posts
  # type: ClusterIP
  # ClusterIP is the default type. So we don't have to specify it.
  ports:
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000
