infra/k8s/query-depl.yaml
# This first half will create the pods based on the image.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: avishkaindula/query:latest
          # We don't have to specify :latest either. It is the default tag.
---
# This second half will create the service for the pods.
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  selector:
    app: query
  # type: ClusterIP
  # ClusterIP is the default type. So we don't have to specify it.
  ports:
    - name: query
      protocol: TCP
      port: 4002
      targetPort: 4002
